automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -95,7 +95,7 @@
     }
    ],
    "source": [
-    "'margaret plong' # \"Margaret Plong\""
+    "'margaret plong' # 'Margaret Plong\""
    ]
   },
   {
