automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -89,13 +89,13 @@
        "'margaret plong'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "'margaret plong' # 'Margaret Plong\""
+    "'margaret plong'.u # 'Margaret Plong'"
    ]
   },
   {
