automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -80,22 +80,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'margaret plong'"
+       "<function str.upper>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "'margaret plong'.u # 'Margaret Plong'"
+    "'margaret plong'.upper # 'Margaret Plong'"
    ]
   },
   {
