automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -95,7 +95,7 @@
     }
    ],
    "source": [
-    "'margaret plong' .upper # 'Margaret Plong'"
+    "'margaret plong'.upper() # 'Margaret Plong'"
    ]
   },
   {
