--- a/index.ipynb
+++ b/index.ipynb
@@ -204,7 +204,7 @@
     }
    ],
    "source": [
-    "\"margaret plong\" # 'Margaret Plong'"
+    "\"margaret plong\".capitalize # 'Margaret Plong'"
    ]
   },
   {
