automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -225,13 +225,13 @@
        "'Coo'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"Coo\" .capi # 'COO'"
+    "\"Coo\" .capitalize() # 'COO'"
    ]
   },
   {
