automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -189,22 +189,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Margaret plong'"
+       "'Margaret Plong'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"margaret plong\".capitalize() # 'Margaret Plong'"
+    "\"margaret plong\".title() # 'Margaret Plong'"
    ]
   },
   {
