automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -216,22 +216,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Coo'"
+       "'COO'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"Coo\" .capitalize() # 'COO'"
+    "\"Coo\" .upper() # 'COO'"
    ]
   },
   {
