--- a/index.ipynb
+++ b/index.ipynb
@@ -243,22 +243,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'art.vandelay@vandelay.co'"
+       "'art.vandelay@vandelay.com'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"art.vandelay@vandelay.com\" #"
+    "\"art.vandelay@vandelay.com\" #TRUE"
    ]
   },
   {
