automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -296,20 +296,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-17-b6d47a470e93>, line 1)",
+     "ename": "NameError",
+     "evalue": "name 'int728' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-17-b6d47a470e93>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    int\"728-555-3334\" (+1) # 728-555-3335\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-18-72ef0b6e02f8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mint728\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m555\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m3334\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# 728-555-3335\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'int728' is not defined"
      ]
     }
    ],
    "source": [
-    "int728-555-3334\" (+1) # 728-555-3335"
+    "int728-555-3334(+1) # 728-555-3335"
    ]
   },
   {
