--- a/index.ipynb
+++ b/index.ipynb
@@ -312,7 +312,7 @@
     }
    ],
    "source": [
-    "int728-555-3334(+1) # 728-555-3335"
+    "int(\"728-555-3334\") 1) # 728-555-3335"
    ]
   },
   {
