--- a/index.ipynb
+++ b/index.ipynb
@@ -296,23 +296,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'int728' is not defined",
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: '728-555-3334'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-18-72ef0b6e02f8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mint728\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m555\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m3334\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# 728-555-3335\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'int728' is not defined"
+      "\u001b[0;31mValueError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-19-c456b65e4f8b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"728-555-3334\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;31m# 728-555-3335\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: '728-555-3334'"
      ]
     }
    ],
    "source": [
-    "int(\"728-555-3334\") 1) # 728-555-3335"
+    "int(\"728-555-3334\") +1# 728-555-3335"
    ]
   },
   {
